# AlsocodeTestTask

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.txt
weather/: forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
weather/migrations/: 0001_initial.py
weather/templates/: base.html
weather/templates/registration/: login.html  register.html
weather/templates/weather/: base.html  forecast.html  home.html
weather_project/: settings.py  urls.py
